examples/errors/parsing/type-params-no-eq.cn
type Foo(a) { Bar : a }

main : () [impure] = ()
